--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 env:
-  - LOCAL_NAME=docker-4dn-rna-strandness REMOTE_NAME=4dndcic/4dn-rna-strandness
+  - LOCAL_NAME=docker-4dn-rna-strandedness REMOTE_NAME=4dndcic/4dn-rna-strandedness
 
 install:
   - docker build -t $LOCAL_NAME .
@@ -22,7 +22,7 @@ before_script:
   - chmod +x tests/tests_cwl.sh
 
 script:
-  - tests/tests_cwl.sh rna-strandness
+  - tests/tests_cwl.sh rna-strandedness
 
 after_success:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
